# eplink-spred2bids-eeg

./: .gitignore  README.md  pyproject.toml
config/: config_download.yml
ext_bin/: 7za
resources/: events.json  header_events.tsv  site-HSC_sub-0001_experiments.txt  site-HSC_sub-0002_experiments.txt  site-HSC_sub-0003_experiments.txt  site-HSC_sub-0004_experiments.txt  site-HSC_sub-0006_experiments.txt  site-HSC_sub-0007_experiments.txt  site-HSC_sub-0008_experiments.txt  site-HSC_sub-0009_experiments.txt  site-HSC_sub-0011_experiments.txt  site-HSC_sub-0012_experiments.txt  site-HSC_sub-0013_experiments.txt  site-HSC_sub-0014_experiments.txt  site-HSC_sub-0015_experiments.txt  site-HSC_sub-0016_experiments.txt  site-HSC_sub-0017_experiments.txt  site-HSC_sub-0018_experiments.txt  site-HSC_sub-0019_experiments.txt  site-HSC_sub-0020_experiments.txt  site-HSC_sub-0023_experiments.txt  site-HSC_sub-0025_experiments.txt  site-HSC_sub-0026_experiments.txt  site-HSC_sub-0028_experiments.txt  site-HSC_sub-0030_experiments.txt  site-HSC_sub-0032_experiments.txt  site-HSC_sub-0034_experiments.txt  site-HSC_sub-0035_experiments.txt  site-HSC_sub-0036_experiments.txt  site-HSC_sub-0037_experiments.txt  site-LHS_sub-0001_experiments.txt  site-LHS_sub-0002_experiments.txt  site-LHS_sub-0003_experiments.txt  site-LHS_sub-0004_experiments.txt  site-LHS_sub-0005_experiments.txt  site-LHS_sub-0007_experiments.txt  site-LHS_sub-0008_experiments.txt  site-LHS_sub-0009_experiments.txt  site-LHS_sub-0010_experiments.txt  site-LHS_sub-0011_experiments.txt  (+133 more)
workflow/: Snakefile
(+6 files in other folders)
