[tool.poetry]
name = "eplink-prelim"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
xnat = "^0.3.28"
snakebids = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
